fix(*): fix map rendering issue on Safari

--- a/app/packs/styles/leaflet-custom.scss
+++ b/app/packs/styles/leaflet-custom.scss
@@ -1,3 +1,19 @@
+// Imports
+@import 'variables';
+@import '~bootstrap/scss/functions';
+@import '~bootstrap/scss/mixins';
+@import '~bootstrap/scss/variables';
+@import 'twitter_bootstrap';
+
+// Fix overflowing issue on Safari
+#trips-view {
+  height: 100%;
+}
+
+#trips-map {
+  @extend .border, .rounded;
+}
+
 .leaflet-div-icon {
   isolation: isolate;
 
